2007-04-15 Niklas Knutsson  <nq@altern.org>

	* Fix simplification of (1-1/x)^3 and similar

2007-03-31 Niklas Knutsson  <nq@altern.org>

	* Add grams of TNT (gTNT/gramTNT) and tons of TNT (tTNT/tonTNT) units

2007-03-29 Niklas Knutsson  <nq@altern.org>

	* Fix parsing of unit expressions (when converting) such as W/(m K)
	* Expand data on elements

2007-03-20 Niklas Knutsson  <nq@altern.org>

	* Fix clumsy mistakes in setPrefixes() leading to crashes
	* Add typographic units
	* Add some old french length units
	* Add alternative name "variations" for permutations
	* Fix atomic mass unit being put in second density category

2006-12-16 Niklas Knutsson  <nq@altern.org>

	* New French translation (Nicolas Laug <Nicolas.Laug@polymtl.ca>)

2006-11-18 Niklas Knutsson  <nq@altern.org>

	* Update Swedish translation

2006-11-07 Niklas Knutsson  <nq@altern.org>

	* Update Dutch translation (Jaap Woldringh <jjh.woldringh@planet.nl>)

2006-11-02 Niklas Knutsson  <nq@altern.org>

	* Use "name := value" as shortcut for save(value; name)
	* Return value in save()

2006-09-10 Niklas Knutsson  <nq@altern.org>

	* Group integer factors in powers

2006-09-05 Niklas Knutsson  <nq@altern.org>

	* Integer factorization
	* Heaviside Step Function, Rectangular Function, Triangular Function, and Ramp Function
	* Kronecker Delta, Sigmoid, and Logit Transformation

2006-08-18 Niklas Knutsson  <nq@altern.org>

	* Generate API docs from autogen.sh
	* Radius instead of diameter as argument for circumference()

2006-07-21 Niklas Knutsson  <nq@altern.org>

	* Interpret 0x[0-9,a-f] as hexadecimal number (do not require first digit to be 0-9)

2006-07-03 Niklas Knutsson  <nq@altern.org>

	* Add optional upper and lower limit arguments to integrate() for definite integrals
	* Add cross() function
	* Handle powers with multiplication as base when setting prefixes
	* Split powers with units when placing units separately
	* Increment version number

2006-06-21 Niklas Knutsson  <nq@altern.org>
