@@ -1,3 +1,9 @@
+2007-04-17 Niklas Knutsson  <nq@altern.org>
+
+	* Avoid floating point underflow by, in approximate mode, 
+	  checking against the value of pi in sin() and cos()
+	* Add more exact values for sin() and cos()
+
 2007-04-15 Niklas Knutsson  <nq@altern.org>
 
 	* Fix simplification of (1-1/x)^3 and similar
